--- a/index.html
+++ b/index.html
@@ -15,21 +15,15 @@
     <title>Frontend Mentor | Base Apparel coming soon page</title>
   </head>
   <body>
-   <img class="logo" src="images/logo.svg">
+    <img class="logo" src="images/logo.svg" />
 
-    <h1 class="h1">WE' RE</h1>
+    <h1>WE'RE</h1>
     <h1>COMING</h1>
     <h1>SOON</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-    <label for=""></label>
-    <input
-      type="email"
-      placeholder="Emailaddress"
-      name="Emailaddress"
-      required
-    />
+    <input type="email" placeholder="Email Address"/>
     <button>></button>
 
     <img class="hero-image" src="images/hero-desktop.jpg" alt="" />
